Working on draft.  Auto-draft and picks are working fine using refresh, except in the case where 2 refreshes happen too close in time.  In this case, the DOMs of different users can become unsynched.  Plan is to correct using AJAX so that refreshing can be avoided.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,3 +23,7 @@
 .temp_block {
 	opacity: .5
 }
+
+#start_draft {
+	opacity: .5;
+}
